--- a/index.html
+++ b/index.html
@@ -376,10 +376,10 @@
   <div class="container">
     <div class="bar-left">
       <ul class="">
-		<li><a href="https://v.bingdou.xyz/" target="_blank">影院</a></li>
+		<li><a href="http://www.misige.cn/" target="_blank">影院</a></li>
 		<li><a href="https://music.bingdou.xyz/" target="_blank">音乐</a></li>
 		<li><a href="https://www.bingdou.vip/" target="_blank">云播</a></li>
-		<li><a href="http://www.bingdou.wang/" target="_blank">直播</a></li>
+		<li><a href="http://www.bingdou.live/" target="_blank">直播</a></li>
 	 </ul>
     </div>
     <div class="bar-right ">
@@ -470,6 +470,30 @@
   <img src="https://m.360buyimg.com/babel/jfs/t1/145461/30/31322/7305/63e24df4F12ce93ed/8396a4efd078fcd0.jpg">
   <h3>冰豆工具箱</h3>
   <p>一个轻量的在线工具集合</p>
+  </a>
+  </div>
+  </div><div class="col-xs-6 col-sm-4 col-md-2">
+  <div class="item">
+  <a href="https://laicj.cn/" target="_blank">
+  <img src="https://laicj.cn/favicon.ico">
+  <h3>AI文本工具站</h3>
+  <p>应用了ChatGPT等AI平台能力</p>
+  </a>
+  </div>
+  </div><div class="col-xs-6 col-sm-4 col-md-2">
+  <div class="item">
+  <a href="https://chat.aiyax.com/zh" target="_blank">
+  <img src="https://chat.aiyax.com/favicon.ico">
+  <h3>Chatbot UI</h3>
+  <p>一个高级聊天机器人工具包</p>
+  </a>
+  </div>
+  </div><div class="col-xs-6 col-sm-4 col-md-2">
+  <div class="item">
+  <a href="https://www.zhongguolian.vip/" target="_blank">
+  <img src="https://www.zhongguolian.vip/favicon.ico">
+  <h3>国链网</h3>
+  <p>全国政务网站导航</p>
   </a>
   </div>
   </div></div></div></div>
@@ -2093,6 +2117,7 @@
   <img src="https://github.bingdou.cc/gh/yellowside/3600/ico/toollu.ico">
   <h3>favicon制作</h3>
   <p>网站图标制作</p>
+
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
