--- a/index.html
+++ b/index.html
@@ -482,10 +482,10 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://chat.aiyax.com/zh" target="_blank">
-  <img src="https://chat.aiyax.com/favicon.ico">
-  <h3>Chatbot UI</h3>
-  <p>一个高级聊天机器人工具包</p>
+  <a href="https://www.infinigo.com/chatIC" target="_blank">
+  <img src="https://www.infinigo.com/_nuxt/img/chatic-logo.f6798bc.png">
+  <h3>道合顺 ChatIC</h3>
+  <p>一个高级聊天机器人</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
