--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://aiwanjia.cn/" target="_blank">
-  <img src="https://aiwanjia.cn/favicon.ico">
-  <h3>AI玩家</h3>
+  <a href="https://ai.cxyquan.com/web/#/" target="_blank">
+  <img src="https://github.bingdou.cc/gh/yellowside/3600/images/e.png">
+  <h3>AI创作</h3>
   <p>应用了ChatGPT等AI平台能力</p>
   </a>
   </div>
