--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.infinigo.com/chatIC" target="_blank">
+  <a href="https://chat.dhs8.com/?chatic=e58d" target="_blank">
   <img src="https://www.infinigo.com/_nuxt/img/chatic-logo.f6798bc.png">
   <h3>道合顺 ChatIC</h3>
   <p>一个高级聊天机器人</p>
