--- a/index.html
+++ b/index.html
@@ -651,18 +651,18 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.mhyyy.com/" target="_blank">
-  <img src="https://www.mhyyy.com/upload/mxcms/20220702-1/c78d585170f6446576c7fc1c4d0ca443.png">
-  <h3>麻花视频</h3>
-  <p>全网免费热门电影大全</p>
+  <a href="https://www.hdmoli.com/" target="_blank">
+  <img src="https://www.hdmoli.com/favicon.ico">
+  <h3>HDmoli影视</h3>
+  <p>高品质在线影视</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.jurenm.com/" target="_blank">
-  <img src="https://www.jurenm.com/template/mytheme/statics/image/20220728/5321c3fc9.png">
-  <h3>巨人影院</h3>
-  <p>每天第一时间更新热播电影</p>
+  <a href="https://bfys.tv/" target="_blank">
+  <img src="https://bfys.tv/mxtheme/images/favicon.png">
+  <h3>暴风影视</h3>
+  <p>聚合全网影片</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
