--- a/index.html
+++ b/index.html
@@ -675,10 +675,10 @@
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
   <div class="item">
-  <a href="https://www.hdmoli.com/" target="_blank">
-  <img src="https://www.hdmoli.com/favicon.ico">
-  <h3>HDmoli</h3>
-  <p>高品质在线影视</p>
+  <a href="https://www.fantuan3.com/" target="_blank">
+  <img src="https://www.fantuan3.com/statics/img/favicon.ico">
+  <h3>饭团影视</h3>
+  <p>蓝光电影电视剧的天堂</p>
   </a>
   </div>
   </div><div class="col-xs-6 col-sm-4 col-md-2">
