--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <title>3600导航 - 安全实用的网址导航</title>
 <meta name="keywords" content="3600导航,网址导航,3600网址导航,工作导航,网站大全">
 <meta name="description" content="3600导航是一个安全实用的网址导航，收录了工作、社交、生活、音乐、购物等领域的优质网站，为广大用户提供高效率的上网导航服务。">
-<link rel="stylesheet" href="https://cdn.bingdou.com.cn/yasidao/css/style.css" />
+<link rel="stylesheet" href="https://cdnjs.bingdou.com.cn/3600/css/style.css" />
 <link href="https://lf26-cdn-tos.bytecdntp.com/cdn/expire-1-M/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 <header class="header"> 
 		<div class="container clearfix"> 
 			<div class="fl left">
-				<a href="/" ><img src="https://cdn.bingdou.com.cn/3600/new/logo.png" alt="3600导航" /></a>
+				<a href="/" ><img src="https://cdnjs.bingdou.com.cn/3600/images/logo.png" alt="3600导航" /></a>
 			</div>
 			<div class="fr nav"> 
 				<ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
@@ -50,10 +50,10 @@
 	<!--移动端的导航-->
 	<nav class="m_nav">
 		<div class="top clearfix">
-			<img src="https://cdn.bingdou.com.cn/yasidao/images/closed.png" alt="" class="closed" />
+			<img src="https://cdnjs.bingdou.com.cn/3600/images/closed.png" alt="" class="closed" />
 		</div>
 		<div class="logo">
-			<img src="https://cdn.bingdou.com.cn/3600/new/logo.png" alt="3600导航" />
+			<img src="https://cdnjs.bingdou.com.cn/3600/images/logo.png" alt="3600导航" />
 		</div>
 		<ul class="ul" data-in="fadeInDown" data-out="fadeOutUp">
 			<li class="active"><a href="/"><i class="fa fa-home"></i> 首 页</a></li>
@@ -2072,7 +2072,7 @@
 	<div id="back-top"><a href="javascript:scroll(0,0)" alt="返回顶部"><span><i class="fa fa-arrow-up fa-lg"></i></span></a></div>
 </section>
 <script src="https://player.alicdn.com/resource/base/lib/jquery-1.8.3.min.js" charset="utf-8"></script>
-<script src="https://cdn.bingdou.com.cn/yasidao/js/js.js" charset="utf-8"></script>
+<script src="https://cdnjs.bingdou.com.cn/3600/js/js.js" charset="utf-8"></script>
 <script>
 var _hmt = _hmt || [];
 (function() {
