--- a/index.html
+++ b/index.html
@@ -2425,7 +2425,7 @@
     <footer class="footer-copyright">
         <div class="container">
             <p>本网站设计及数据均受版权保护，任何公司及个人不得以任何方式复制，违者将依法追究责任，特此声明。</p>
-            <p><span><a href="https://huangbin.net/" rel="nofollow">关于我们</a></span> <span><a href="https://api.qianqi.net/qq/im/?qq=77696199" rel="nofollow">联系我们</a></span> <span><a href="https://api.qianqi.net/qq/im/?qq=77696199" rel="nofollow">友情链接</a></span></p>
+            <p><span><a href="https://huangbin.net/" rel="nofollow">关于我们</a></span> <span><a href="https://api.bingdou.com.cn/qq/im/?qq=77696199" rel="nofollow">联系我们</a></span> <span><a href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=77696199@qq.com" rel="nofollow">友情链接</a></span></p>
             <p>&copy; 2012-<script>document.write(new Date().getFullYear())</script> huangbin.net, All Rights Reserved.</p>
         </div>
     </footer>
