--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="fl left"><a href="./" target="_self"><img src="https://cdn.misidao.cn/3600/images/logo.png" alt="3600导航" /></a></div>
             <div class="fr nav">
                 <ul class="navbar_nav" data-in="fadeInDown" data-out="fadeOutUp">
-                    <li><a href="https://www.bingdou.com.cn/font/" target="_blank"><i class="fa fa-font"></i> 字体导航</a></li>
+                    <li><a href="https://font.bingdou.com.cn/" target="_blank"><i class="fa fa-font"></i> 字体导航</a></li>
                     <li class="dropdown">
                         <a><i class="fa fa-suitcase"></i> 在线工具 <i class="fa fa-angle-down"></i></a>
                         <div class="dropdown_menu">
@@ -52,7 +52,7 @@
         <div class="top clearfix"><span class="closed"></span></div>
         <div class="logo"><img src="https://cdn.misidao.cn/3600/images/logo.png" alt="3600导航" /></div>
         <ul class="ul" data-in="fadeInDown" data-out="fadeOutUp">
-            <li><a href="./font/" target="_self"><i class="fa fa-font"></i> 字体导航</a></li>
+            <li><a href="https://font.bingdou.com.cn/" target="_blank"><i class="fa fa-font"></i> 字体导航</a></li>
             <li class="dropdown">
                 <a><i class="fa fa-suitcase"></i> 在线工具 <i class="fa fa-angle-down"></i></a>
                 <div class="dropdown_menu">
