--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ a {text-decoration:none;color:#7f8c8d;}
 .search-btn {padding:12px 25px;background:#3498db;color:white;border:none;border-radius:4px;font-size:16px;cursor:pointer;transition:background 0.3s;}
 .search-btn:hover {background:#fe8528;}
 .search-hint {margin-top:10px;color:#7f8c8d;font-size:14px;}
+.search-hint a:hover {color:#fe8528;}
 /* 搜索建议下拉框样式*/
 .search-suggest {position:relative;flex:3;min-width:200px;}
 .suggest-list {position:absolute;top:100%;left:0;right:0;background:white;border:1px solid #e1e1e1;border-top:none;border-radius:0 0 4px 4px;box-shadow:0 2px 8px rgba(0,0,0,0.1);z-index:99;max-height:200px;overflow-y:auto;display:none;}
@@ -36,10 +37,10 @@ a {text-decoration:none;color:#7f8c8d;}
 .category {margin:40px 0;}
 .category h2 {font-size:18px;color:#34495e;border-left:4px solid #3498db;padding-left:10px;margin-bottom:20px;}
 .site-list {display:flex;flex-wrap:wrap;gap:15px;}
-.site-card {background:white;padding:15px 10px;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);width:calc(20% - 12px);text-align:center;transition:transform 0.3s;}
-.site-card:hover {transform:translateY(-5px);}
-.site-card a {text-decoration:none;color:#2c3e50;font-size:16px;display:block;}
-.site-card a:hover {color:#3498db;}
+.site-card {background:white;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);width:calc(20% - 12px);text-align:center;transition:transform 0.3s;}
+.site-card:hover {background:#fe8528;transform:translateY(-5px);}
+.site-card a {text-decoration:none;color:#2c3e50;font-size:16px;display:block;padding:15px 10px;}
+.site-card a:hover {color:#ffffff;}
 footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #ecf0f1;color:#7f8c8d;}
 /* 响应式适配*/
 @media (max-width:1024px) {.site-card {width:calc(25% - 11.25px);}
