--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ a {text-decoration:none;color:#7f8c8d;}
 .category h2 {font-size:18px;color:#34495e;border-left:4px solid #3498db;padding-left:10px;margin-bottom:20px;}
 .site-list {display:flex;flex-wrap:wrap;gap:15px;}
 .site-card {background:white;border-radius:8px;box-shadow:0 2px 5px rgba(0,0,0,0.1);width:calc(20% - 12px);text-align:center;transition:transform 0.3s;}
-.site-card:hover {background:#fe8528;transform:translateY(-5px);}
+.site-card:hover {background:#fe8528;transform:translateY(-2px);}
 .site-card a {text-decoration:none;color:#2c3e50;font-size:16px;display:block;padding:15px 10px;}
 .site-card a:hover {color:#ffffff;}
 footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #ecf0f1;color:#7f8c8d;}
@@ -107,9 +107,9 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
         <div class="site-card"><a href="https://fanyi.baidu.com/" target="_blank">百度翻译</a></div>
         <div class="site-card"><a href="https://www.rili.com.cn/" target="_blank">万年历查询</a></div>
         <div class="site-card"><a href="https://www.msn.cn/zh-cn/weather?ocid=binghp01" target="_blank">天气预报</a></div>
-        <div class="site-card"><a href="https://tool.bingdou.com.cn/" target="_blank">冰豆工具箱</a></div>
         <div class="site-card"><a href="https://imagecompressor.com/zh/" target="_blank">图像优化器</a></div>
         <div class="site-card"><a href="https://tool.browser.qq.com/id_photo.html" target="_blank">证件照生成</a></div>
+        <div class="site-card"><a href="https://www.18.com.cn/" target="_blank">东方财富</a></div>
         <div class="site-card"><a href="https://www.500.com/" target="_blank">彩票开奖查询</a></div>
         <div class="site-card"><a href="https://www.gsxt.gov.cn/" target="_blank">企业信息查询</a></div>
         <div class="site-card"><a href="https://www.ip138.com/" target="_blank">IP地址查询</a></div>
