--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
         <div class="site-card"><a href="https://www.gsxt.gov.cn/" target="_blank">企业信息查询</a></div>
         <div class="site-card"><a href="https://www.ip138.com/" target="_blank">IP地址查询</a></div>
         <div class="site-card"><a href="https://www.kuaidi100.com/" target="_blank">快递查询</a></div>
+        <div class="site-card"><a href="https://www.135editor.com/" target="_blank">135编辑器</a></div>
+        <div class="site-card"><a href="https://mp.weixin.qq.com/" target="_blank">微信公众平台</a></div>
+        <div class="site-card"><a href="https://channels.weixin.qq.com/login.html" target="_blank">视频号助手</a></div>
+        <div class="site-card"><a href="https://szfilehelper.weixin.qq.com/" target="_blank">微信文件助手</a></div>
+        <div class="site-card"><a href="https://ytqsy.com/" target="_blank">兔兔去水印</a></div>
     </div>
 </section>
 <section class="category">
@@ -214,7 +219,7 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
 <section class="category">
     <h2>网盘资源</h2>
     <div class="site-list">
-        <div class="site-card"><a href="https://www.ctfile.com/linker/1675875" target="_blank">城通网盘</a></div>
+        <div class="site-card"><a href="https://www.ctfile.com/register?u=1675875" target="_blank">城通网盘</a></div>
         <div class="site-card"><a href="https://login.123pan.com/centerlogin?register=invite&ref=isGDVv" target="_blank">123云盘</a></div>
         <div class="site-card"><a href="https://pan.baidu.com/" target="_blank">百度网盘</a></div>
         <div class="site-card"><a href="https://www.alipan.com/" target="_blank">阿里云盘</a></div>
