--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ a {text-decoration:none;color:#7f8c8d;}
 .search-container {max-width:800px;margin:0 auto;display:flex;flex-wrap:wrap;gap:10px;align-items:center;}
 .search-select {padding:12px 15px;border-style:solid;border:1px solid #f5f5f5;border-radius:4px;font-size:16px;min-width:120px;}
 .search-input {padding:12px 15px;border-style:solid;border:1px solid #f5f5f5;border-radius:4px;font-size:16px;width:100%;}
-.search-btn {padding:12px 25px;background:#3498db;color:white;border:none;border-radius:4px;font-size:16px;cursor:pointer;transition:background 0.3s;}
-.search-btn:hover {background:#fe8528;}
+.search-btn {padding:12px 25px;background:white;color:#2c3e50;border:none;border-radius:4px;font-size:16px;cursor:pointer;transition:background 0.3s;}
+.search-btn:hover {background:#fe8528;color:#ffffff;}
 .search-hint {margin-top:10px;color:#7f8c8d;font-size:14px;}
 .search-hint a:hover {color:#fe8528;}
 /* 搜索建议下拉框样式*/
@@ -78,7 +78,7 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
 </nav>
 <main class="container">
 <section class="search-section">
-    <form class="search-container" onsubmit="handleSearch(event)">
+    <form class="search-container" onSubmit="handleSearch(event)">
         <select class="search-select" id="searchType">
             <option value="net">网页信息</option>
             <option value="pan">网盘资源</option>
