--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
             <li><a href="https://www.misidao.cn/ai/" target="_blank">玩转AI</a></li>
             <li><a href="https://www.bingdou.vip/" target="_blank">视频云播</a></li>
             <li><a href="https://www.bingdou.live/" target="_blank">影视直播</a></li>
-            <li><a href="https://tool.bingdou.com.cn/" target="_blank">实用工具</a></li>
-            <li><a href="https://www.29dns.cn/" target="_blank">DNS大全</a></li>
+            <li><a href="https://www.29dns.cn/" target="_blank">实用工具</a></li>
+            <li><a href="https://www.bingdou.com.cn/" target="_blank">站长资源</a></li>
             <li><a href="https://fuli.fanbing.cc/" target="_blank">每日福利</a></li>
         </ul>
         <div class="mobile-menu-btn" id="mobileMenuBtn">☰</div>
@@ -98,7 +98,6 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
 <section class="category">
     <h2>常用工具</h2>
     <div class="site-list">
-        <div class="site-card"><a href="https://wx.qq.com/" target="_blank">微信网页版</a></div>
         <div class="site-card"><a href="https://mail.qq.com/" target="_blank">QQ邮箱</a></div>
         <div class="site-card"><a href="https://mail.163.com/" target="_blank">网易163邮箱</a></div>
         <div class="site-card"><a href="https://www.12306.cn/" target="_blank">中国铁路12306</a></div>
@@ -113,11 +112,12 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
         <div class="site-card"><a href="https://www.gsxt.gov.cn/" target="_blank">企业信息查询</a></div>
         <div class="site-card"><a href="https://www.ip138.com/" target="_blank">IP地址查询</a></div>
         <div class="site-card"><a href="https://www.kuaidi100.com/" target="_blank">快递查询</a></div>
+        <div class="site-card"><a href="https://ytqsy.com/" target="_blank">兔兔去水印</a></div>
         <div class="site-card"><a href="https://www.135editor.com/" target="_blank">135编辑器</a></div>
         <div class="site-card"><a href="https://mp.weixin.qq.com/" target="_blank">微信公众平台</a></div>
         <div class="site-card"><a href="https://channels.weixin.qq.com/login.html" target="_blank">视频号助手</a></div>
+        <div class="site-card"><a href="https://wx.qq.com/" target="_blank">微信网页版</a></div>
         <div class="site-card"><a href="https://szfilehelper.weixin.qq.com/" target="_blank">微信文件助手</a></div>
-        <div class="site-card"><a href="https://ytqsy.com/" target="_blank">兔兔去水印</a></div>
     </div>
 </section>
 <section class="category">
