--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
         <div class="site-card"><a href="https://chat.deepseek.com/" target="_blank">DeepSeek</a></div>
         <div class="site-card"><a href="https://chatglm.cn/" target="_blank">智谱清言</a></div>
         <div class="site-card"><a href="https://hunyuan.tencent.com/" target="_blank">腾讯混元</a></div>
-        <div class="site-card"><a href="https://www.tongyi.com/" target="_blank">通义千问</a></div>
+        <div class="site-card"><a href="https://www.qianwen.com/" target="_blank">通义千问</a></div>
         <div class="site-card"><a href="https://xinghuo.xfyun.cn/desk" target="_blank">讯飞星火认知大模型</a></div>
         <div class="site-card"><a href="https://www.doubao.com/chat/" target="_blank">豆包AI</a></div>
         <div class="site-card"><a href="https://yiyan.baidu.com/" target="_blank">百度文心一言</a></div>
@@ -143,10 +143,10 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
 <section class="category">
     <h2>影视视频</h2>
     <div class="site-list">
-        <div class="site-card"><a href="https://www.youku.com/" target="_blank">优酷</a></div>
         <div class="site-card"><a href="https://v.qq.com/" target="_blank">腾讯视频</a></div>
         <div class="site-card"><a href="https://www.mgtv.com/" target="_blank">芒果TV</a></div>
         <div class="site-card"><a href="https://www.iqiyi.com/" target="_blank">爱奇艺</a></div>
+        <div class="site-card"><a href="https://www.youku.com/" target="_blank">优酷</a></div>
         <div class="site-card"><a href="https://tv.cctv.com/" target="_blank">CCTV节目官网</a></div>
         <div class="site-card"><a href="https://www.m1905.com/" target="_blank">电影网</a></div>
         <div class="site-card"><a href="https://www.bilibili.com/" target="_blank">哔哩哔哩</a></div>
