--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
         </div>
         <button type="submit" class="search-btn">搜 索</button>
     </form>
-    <p class="search-hint"><a href="https://simhaoka.com/phone/index?id=1391859802540369F174120E0A63330A" target="_blank">大流量卡免费领（四大运营商）</a></p>
+    <!--<p class="search-hint"><a href="https://simhaoka.com/phone/index?id=1391859802540369F174120E0A63330A" target="_blank">大流量卡免费领（四大运营商）</a></p>-->
 </section>
 <section class="category">
     <h2>常用工具</h2>
@@ -236,7 +236,7 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
     </div>
 </section>
 <footer>
-<p>&copy; 2012-<script>document.write(new Date().getFullYear())</script> huangbin.net, All Rights Reserved.</p>
+<p>&copy; 2012-<script>document.write(new Date().getFullYear())</script> bingdou.cc, All Rights Reserved.</p>
 </footer>
 </main>
 <script>
