--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a {text-decoration:none;color:#7f8c8d;}
 .site-card:hover {background:#fe8528;transform:translateY(-2px);}
 .site-card a {text-decoration:none;color:#2c3e50;font-size:16px;display:block;padding:15px 10px;}
 .site-card a:hover {color:#ffffff;}
-footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #ecf0f1;color:#7f8c8d;}
+footer {text-align:center;padding:20px 0;border-top:1px solid #ecf0f1;color:#7f8c8d;font-size:14px;}
 /* 响应式适配*/
 @media (max-width:1024px) {.site-card {width:calc(25% - 15px);}}
 @media (max-width:768px) {.site-card {width:calc(33.333% - 15px);}
@@ -528,3 +528,4 @@ footer {text-align:center;margin-top:60px;padding:20px 0;border-top:1px solid #e
 </script>
 </body>
 </html>
+
